--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "preview": "vite preview",
     "format": "prettier -w src/*.{ts,vue} && prettier -w src/**/*.{ts,vue}",
     "fix": "npm run format && npm run lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "npx eslint . --fix",
+      "npx prettier --write ."
+    ]
   },
   "dependencies": {
+    "vue": "^3.2.37",
+    "vite": "^3.1.0"
+  },
+  "devDependencies": {
     "@typescript-eslint/parser": "^5.38.1",
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint-config-airbnb": "^19.0.4",
-    "vue": "^3.2.37"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@vitejs/plugin-vue": "^3.1.0",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
@@ -35,7 +45,6 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
-    "vite": "^3.1.0",
     "vue-tsc": "^0.40.4"
   }
 }
