--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "vue": "^3.2.37",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "@vitejs/plugin-vue": "^3.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.38.1",
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint-config-airbnb": "^19.0.4",
-    "@vitejs/plugin-vue": "^3.1.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
