--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "./.eslintrc.js","./vite.config.ts"],
+  "include": [
+    "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "./.eslintrc.js","./vite.config.ts", "./postcss.config.cjs", "./tailwind.config.cjs"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
