--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,29 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "vue/setup-compiler-macros": true
-    },
-    "extends": [
-        "airbnb-base",
-        "plugin:vue/vue3-recommended",
-        "plugin:vue-pug/vue3-recommended",
-        "standard-with-typescript",
-        "@vue/typescript/recommended",
-        "eslint:recommended",
-        "eslint-config-prettier",
-        "prettier"
-    ],
-    "overrides": [
-    ],
-    "parser": "vue-eslint-parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "parser": "@typescript-eslint/parser",
-        "sourceType": "module",
-        "project": "./tsconfig.json"
-    },
-    "plugins": [
-        "vue",
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "no-console": "off"
-    }
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "vue/setup-compiler-macros": true
+  },
+  "extends": [
+    "airbnb-base",
+    "plugin:vue/vue3-recommended",
+    "plugin:vue-pug/vue3-recommended",
+    "standard-with-typescript",
+    "@vue/typescript/recommended",
+    "eslint:recommended",
+    "eslint-config-prettier",
+    "prettier"
+  ],
+  "overrides": [],
+  "parser": "vue-eslint-parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "parser": "@typescript-eslint/parser",
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["vue", "@typescript-eslint"],
+  "rules": {
+    "no-console": "off"
+  }
 }
