--- a/package.json
+++ b/package.json
@@ -19,25 +19,28 @@
     ]
   },
   "dependencies": {
-    "vue": "^3.2.37",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "pinia": "^2.0.22",
     "vite": "^3.1.0",
-    "@vitejs/plugin-vue": "^3.1.0"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.38.1",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint-config-airbnb": "^19.0.4",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-vue": "^9.5.1",
+    "eslint-plugin-vue-pug": "^0.5.4",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.17",
