--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,14 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "./.eslintrc.js","./vite.config.ts", "./postcss.config.cjs", "./tailwind.config.cjs"
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "./.eslintrc.js",
+    "./vite.config.ts",
+    "./postcss.config.cjs",
+    "./tailwind.config.cjs"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
