--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "@vue/eslint-config-typescript": "^11.0.2",
     "autoprefixer": "^10.4.12",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -48,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
+    "vue-loader": "^16.8.3",
     "vue-tsc": "^0.40.4"
   }
 }
