--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "pug": "^3.0.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
     "vue-loader": "^16.8.3",
