chore: github pagesに反映されるかテスト

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "./.eslintrc.js",
     "./vite.config.ts",
     "./postcss.config.cjs",
-    "./tailwind.config.cjs"
-, "src/stories/Button.stories.js"  ],
+    "./tailwind.config.cjs",
+    "src/stories/Button.stories.js"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
