--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "flowbite": "^1.5.3",
     "pinia": "^2.0.22",
+    "pug": "^3.0.2",
     "vite": "^3.1.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
