--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
 
       - uses: actions/upload-pages-artifact@v1
         with:
-          path: build
+          path: docs
 
   deploy:
     needs: build
