--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -55,5 +55,5 @@ jobs:
       - name: Build
         run: npm run build --if-present
       - name: Test
-        run: npm test
+        run: npm run test
 
