--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@babel/core": "^7.19.3",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/jest": "^29.1.1",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.1.0",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "eslint": "^8.24.0",
@@ -45,13 +47,16 @@
     "eslint-plugin-vue": "^9.5.1",
     "eslint-plugin-vue-pug": "^0.5.4",
     "husky": "^8.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "pug": "^3.0.2",
     "tailwindcss": "^3.1.8",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.8.4",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.40.4"
   }
