--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "konva": "^8.3.13",
+    "nanoid": "^4.0.0",
     "pinia": "^2.0.22",
+    "pug": "^3.0.2",
     "vite": "^3.1.0",
     "vue": "^3.2.37",
+    "vue-konva": "^3.0.1",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
@@ -41,6 +45,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.1",
     "eslint-plugin-n": "^15.3.0",
