--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: ['main', 'develop']
   pull_request:
-    branches: ['main', 'develop', 'feat/**', 'fix/**']
+    branches: ['main', 'develop', 'features/**', 'feature/**', 'fix/**']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
