feat: headerコンポーネントを作成

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
   "plugins": ["vue", "@typescript-eslint", "jest"],
   "rules": {
     "no-console": "off",
+    "vue/multi-word-component-names": "off",
     "jest/no-disabled-tests": "warn",
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
