--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "axios": "^1.1.3",
     "konva": "^8.3.13",
     "nanoid": "^4.0.0",
     "pinia": "^2.0.22",
