--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Build Vue
         run: npm run build
 
-      - uses: actions/upload-pages-artifact@v1
+      - uses: actions/upload-artifact@v3
         with:
-          path: docs
+          path: docs/
 
   deploy:
     needs: build
