元に戻す。(pages→sourceをgithub actionsに訂正)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,9 @@ jobs:
       - name: Build Vue
         run: npm run build
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-pages-artifact@v1
         with:
           path: docs/
-
   deploy:
     needs: build
     permissions:
