fix: absolute paths

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,8 @@
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".json", ".ts", ".tsx"]
-      }
+      },
+      "typescript": {}
     }
   }
 }
