--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "firebase": "^9.12.1",
     "flowbite": "^1.5.3",
     "konva": "^8.3.13",
     "nanoid": "^4.0.0",
