fix: pugのエラーを検出するライブラリと、新しいversionのvue-tscをインストール

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "typeRoots": ["types", "node_modules/@types"]
+  },
+  "vueCompilerOptions": {
+    "plugins": [
+      "@volar/vue-language-plugin-pug"
+    ]
   },
   "include": [
     "src/**/*.ts",
