--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jest": "^29.1.1",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
+    "@volar/vue-language-plugin-pug": "^1.0.9",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.1.0",
     "autoprefixer": "^10.4.12",
@@ -68,6 +69,6 @@
     "typescript": "^4.8.4",
     "vue-jest": "^5.0.0-alpha.10",
     "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.40.4"
+    "vue-tsc": "^0.40.13"
   }
 }
