--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue": "^3.2.37",
     "vue-konva": "^3.0.1",
     "vue-router": "^4.1.5",
+    "vue-tsc": "^1.0.9",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
@@ -68,7 +69,6 @@
     "ts-jest": "^26.5.6",
     "typescript": "^4.8.4",
     "vue-jest": "^5.0.0-alpha.10",
-    "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.40.13"
+    "vue-loader": "^16.8.3"
   }
 }
