fix: 型のインポートを一時的に中し

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    },
+    }
   },
   "vueCompilerOptions": {
-    "plugins": [
-      "@volar/vue-language-plugin-pug"
-    ]
+    "plugins": ["@volar/vue-language-plugin-pug"]
   },
   "include": [
     "src/**/*.ts",
