--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
 [[headers]] 
   for = "/*" 
   [headers.values] 
-    Content-Security-Policy = "default-src *;"
+    Content-Security-Policy = '''
+    "default-src 'self';",
+    "style-src 'self' https://fonts.googleapis.com;",
+    "img-src 'self';"'''
