--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   for = "/*" 
   [headers.values] 
     Content-Security-Policy = '''
-    "default-src 'self';",
-    "style-src 'self' https://fonts.googleapis.com;",
-    "img-src 'self';"'''
+    default-src 'self';
+    connect-src 'self';
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    img-src 'self';'''
