--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,6 @@
   [headers.values] 
     Content-Security-Policy = '''
     default-src *;
-    connect-src 'self' data:
+    connect-src 'self' data:;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     img-src 'self' data: https://firebasestorage.googleapis.com;'''
