--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/lodash": "^4.14.187",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.1.0",
+    "compressorjs": "^1.2.1",
     "daisyui": "^2.33.0",
     "firebase": "^9.12.1",
     "flowbite": "^1.5.3",
