--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,4 @@
     default-src *;
     connect-src * data:;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    img-src 'self' data: https://firebasestorage.googleapis.com;'''
+    img-src 'self' data: blob:;'''
